add votes to questions + add answers

--- a/app/question-list/question-list.template.html
+++ b/app/question-list/question-list.template.html
@@ -14,6 +14,7 @@
         <select ng-model="$ctrl.orderProp">
           <option value="title">Alphabetical</option>
           <option value="lastModified">Last modified</option>
+          <option value="-votes">Votes</option>
         </select>
       </p>
       
