--- a/app/question-list/question-list.template.html
+++ b/app/question-list/question-list.template.html
@@ -25,7 +25,7 @@
       <ul class="questions">
         <li ng-repeat="question in $ctrl.questions | filter: { title: $ctrl.query } | orderBy: $ctrl.orderProp">
           <a href="#!questions/{{question.id}}">{{question.title}}</a>
-          <p>{{question.lastModified}}</p>
+          <p>{{question.lastModified * 1000 | date:"MMM dd yyyy 'at' HH:mm"}}</p>
         </li>
       </ul>
     </div>
