use resource instead of  + question service for REST calls

--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="app.css" />
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="app.module.js"></script>
     <script src="app.config.js"></script>
+    <script src="core/core.module.js"></script>
+    <script src="core/question/question.module.js"></script>
+    <script src="core/question/question.service.js"></script>
     <script src="question-list/question-list.module.js"></script>
     <script src="question-list/question-list.component.js"></script>
     <script src="question-detail/question-detail.module.js"></script>
