--- a/app/create-question/create-question.template.html
+++ b/app/create-question/create-question.template.html
@@ -8,16 +8,16 @@
 
     <div class="row">
         <div class="col-md-10">
-            <form class="form-horizontal">
+            <form class="form-horizontal" ng-submit="createQuestion()">
                 <div class="form-group col-md-12">
                     <label class="control-label col-md-1" for="title">Title</label>
                     <div class="col-md-8">
-                        <input id="title" type="text" class="form-control">
+                        <input id="title" type="text" class="form-control" ng-model="title" ng-trim="false" required>
                     </div>
                 </div>
                 <div class="form-group col-md-12">
                     <div>
-                        <textarea class="form-control" rows="10"></textarea>
+                        <textarea class="form-control" rows="10" ng-model="content" ng-trim="false" required></textarea>
                     </div>
                 </div>
                 <button type="submit" class="btn btn-primary">Post your question</button>
