--- a/app/create-question/create-question.template.html
+++ b/app/create-question/create-question.template.html
@@ -20,6 +20,10 @@
                         <textarea class="form-control" rows="10" ng-model="content" ng-trim="false" required></textarea>
                     </div>
                 </div>
+                <div class="form-group col-md-12">
+                    <label class="control-label" for="tags">Tags</label>
+                    <input id="tags" class="form-control" ng-model="tags" type="text" placeholder="At least one tag. Separate tags by semicolons" required>
+                </div>
                 <button type="submit" class="btn btn-primary">Post your question</button>
             </form>
         </div>
