--- a/app/question-detail/question-detail.template.html
+++ b/app/question-detail/question-detail.template.html
@@ -37,7 +37,7 @@
                     <div class="row">
                         <div class="votes col-md-1">
                             <span class="glyphicon glyphicon-triangle-top"></span><br>
-                            <span class="vote-nb">{{$ctrl.question.votes}}</span><br>
+                            <span class="vote-nb">{{answer.votes}}</span><br>
                             <span class="glyphicon glyphicon-triangle-bottom"></span>
                         </div>
                         <div class="col-md-11">
