--- a/app/question-list/question-list.template.html
+++ b/app/question-list/question-list.template.html
@@ -14,7 +14,7 @@
             <div class="form-group col-md-2">
               <select class="form-control" ng-model="$ctrl.orderProp">
                   <option value="title">Alphabetical</option>
-                  <option value="lastModified">Last modified</option>
+                  <option value="updatedAt">Last modified</option>
                   <option value="-votes">Votes</option>
                 </select>
             </div>
@@ -29,10 +29,11 @@
     <div class="questions col-md-12">
       <ul>
         <li ng-repeat="question in $ctrl.questions | filter: { title: $ctrl.query } | orderBy: $ctrl.orderProp">
-          <a href="#!questions/{{question.id}}">{{question.title}}</a>
-          <p>{{question.lastModified * 1000 | date:"MMM dd yyyy 'at' HH:mm"}}</p>
+          <a href="#!questions/{{question._id}}">{{question.title}}</a>
+          <p>{{question.updatedAt | date:"MMM dd yyyy 'at' HH:mm"}}</p>
         </li>
       </ul>
+      <h4 ng-if="$ctrl.questions.length == 0">There is no question yet !</h4>
     </div>
   </div>
 
