lastModified questions ordering by most recent first

--- a/app/question-list/question-list.template.html
+++ b/app/question-list/question-list.template.html
@@ -14,7 +14,7 @@
             <div class="form-group col-md-2">
               <select class="form-control" ng-model="$ctrl.orderProp">
                   <option value="title">Alphabetical</option>
-                  <option value="updatedAt">Last modified</option>
+                  <option value="-updatedAt">Last modified</option>
                   <option value="-votes">Votes</option>
                 </select>
             </div>
